Sidenav Component: Little fix to transition the text when the sidenav gets collapsed

--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -28,6 +28,7 @@
 
     .sidenav-label {
       white-space: nowrap;
+      transition: opacity 400ms;
     }
   }
 
